updated login overlay

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,22 +7,25 @@
         <button class="register-button">Sign up</button>
       </div>
     </div>
-    <div class="login-overlay">
-      <div class="login-title">
-        <h1>Log in</h1>
-        <div class="title-line"></div>
-      </div>
-      <div class="login-form">
-        <form>
-          <input type="email" placeholder="Email" name="email">
-          <input type="password" placeholder="Password" name="password">
-          <div class="form-btn">
-            <button class="login-button">Login</button>
-            <button class="guest-button">Guest Log in</button>
-          </div>
-        </form>
+    <div class="login-container">
+      <div class="login-overlay">
+        <div class="login-title">
+          <h1>Log in</h1>
+          <div class="title-line"></div>
+        </div>
+        <div class="login-form">
+          <form>
+            <input type="email" placeholder="Email" name="email">
+            <input type="password" placeholder="Password" name="password">
+            <div class="form-btn">
+              <button class="login-button">Login</button>
+              <button class="guest-button">Guest Log in</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
+
     <footer>
       <div class="footer-content">
         <a routerLink="/privacy">Privacy Policy</a>
