Style: summary scss edit

--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -24,9 +24,13 @@
     width: calc(100dvw - 230px);
     overflow-y: auto;
     scrollbar-width: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+
     @media (max-width:965px) {
         padding: 0px 10px;
-            width: calc(100dvw);
+        width: calc(100dvw);
 
     }
 }
