feat&style: scss responsive summary & routerlinks editing login and summary

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
       <img src="assets/img/header/Logo.png" alt="Logo Join">
       <div class="login-nav">
         <p>Not a Join User?</p>
-        <button class="register-button">Sign up</button>
+        <button class="register-button" routerLink="/signup">Sign up</button>
       </div>
     </div>
 
@@ -23,7 +23,7 @@
           <input type="password" placeholder="Password" formControlName="password">
           <div class="form-btn">
             <button type="submit" class="login-button">Login</button>
-            <button class="guest-button">Guest Log in</button>
+            <button class="guest-button" routerLink="/">Guest Log in</button>
           </div>
         </form>
         </div>
