--- a/src/app/signup-overlay/signup-overlay.component.html
+++ b/src/app/signup-overlay/signup-overlay.component.html
@@ -2,7 +2,9 @@
   <div class="content">
     <div class="signup-container">
       <div class="signup-title">
+        <button routerLink="/login"> 
         <img src="assets/img/info-screen/arrow-left-line.png" alt="Back Button">
+        </button>
         <h1>Sign up</h1>
         <div class="title-line"></div>
       </div>
