--- a/src/app/summary/summary-content/summary-content.component.html
+++ b/src/app/summary/summary-content/summary-content.component.html
@@ -6,6 +6,12 @@
       <h3>Key Metrics at Glance</h3>
     </div>
 
+        <div class="headline-area-summary-mobile">
+      <h1>Join 360</h1>
+      <h3>Key Metrics at Glance</h3>
+            <div class="hyphen-mobile"></div>
+    </div>
+
     <div class="menu-summary">
 
       <div class="to-do-done">
