--- a/src/app/summary/summary-content/summary-content.component.scss
+++ b/src/app/summary/summary-content/summary-content.component.scss
@@ -2,11 +2,18 @@ section {
   display: flex;
   font-size: 10px;
   height: 100%;
+  flex: 1;
 
   .main-input {
     display: flex;
     flex-direction: column;
+
+    @media (max-width: 1270px) {
+      width: 100%;
+      flex: 1;
+    }
   }
+
 }
 
 .user-greeting {
@@ -16,6 +23,10 @@ section {
   align-items: start;
   justify-content: center;
   flex-direction: column;
+
+  @media (max-width: 1270px) {
+    display: none;
+  }
 
   #username {
     font-size: 6.4em;
@@ -32,9 +43,37 @@ section {
   align-items: center;
   width: 100%;
 
+  @media (max-width: 1270px) {
+    display: none;
+  }
+
   >.hyphen {
     height: 60px;
     width: 3px;
+    background-color: #29abe2;
+  }
+}
+
+.headline-area-summary-mobile {
+  gap: 1em;
+  margin: 6em 0em;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+  @media (max-width: 1270px) {
+    margin: 5em 0em;
+
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  >.hyphen-mobile {
+    width: 100px;
+    height: 3px;
     background-color: #29abe2;
   }
 }
@@ -75,6 +114,7 @@ h4 {
 
 h1 {
   font-size: 6.1em;
+  width: 100%;
 }
 
 p {
@@ -102,7 +142,7 @@ p {
   }
 }
 
-.hover-container{
+.hover-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,17 +164,18 @@ p {
   width: 90%;
   transition: ease-in-out 0.1s;
 
-    &:hover {
+  &:hover {
     height: 18em;
     width: 100%;
     background-color: #2A3647;
   }
 }
 
-.deadline-priority-container{
+.deadline-priority-container {
   width: 100%;
   height: 18em;
 }
+
 .deadline-priority {
   cursor: pointer;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
@@ -149,7 +190,7 @@ p {
   transition: ease-in-out 0.1s;
 
 
-    &:hover {
+  &:hover {
     width: 103%;
     height: 19em;
     background-color: #2A3647;
