--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -31,7 +31,8 @@
     @media (max-width:965px) {
         padding: 0px 10px;
         width: calc(100dvw);
-
+        justify-content: center;
+        align-items: ce;
     }
 }
 
@@ -40,6 +41,7 @@ app-kanban-board {
 }
 
 app-summary-content {
+    display: flex;
     width: 100%;
 }
 
