--- a/src/app/summary/summary-content/summary-content.component.scss
+++ b/src/app/summary/summary-content/summary-content.component.scss
@@ -14,6 +14,9 @@ section {
     }
   }
 
+  @media (max-width: 965px) {
+    font-size: 8px;
+  }
 }
 
 .user-greeting {
@@ -70,6 +73,10 @@ section {
     flex-direction: column;
     align-items: start;
   }
+    @media (max-width: 1270px) {
+    margin: 3em 0em;
+
+  }
 
   >.hyphen-mobile {
     width: 100px;
@@ -82,30 +89,41 @@ section {
   gap: 20px;
   display: flex;
   flex-direction: column;
+        @media (max-width: 750px) {
+    gap: 0px;
+  }
 
   .to-do-done {
     display: flex;
     height: 18em;
     width: 100%;
     justify-content: space-between;
+
+      @media (max-width: 750px) {
+    height: 16em;
+  }
   }
 }
 
 span {
-  color: #2A3647;
+  color: #2a3647;
   font-size: 2em;
 }
 
 h3 {
-  color: #2A3647;
+  color: #2a3647;
   font-size: 2.7em;
   font-weight: 400;
+
+  @media (max-width: 750px) {
+    font-size: 20px;
+  }
 }
 
 h2 {
   font-weight: 500;
   font-size: 4.7em;
-  color: #2A3647;
+  color: #2a3647;
 }
 
 h4 {
@@ -115,10 +133,18 @@ h4 {
 h1 {
   font-size: 6.1em;
   width: 100%;
+
+  @media (max-width: 750px) {
+    font-size: 47px;
+  }
 }
 
 p {
   font-size: 6.7em;
+
+  @media (max-width: 750px) {
+    font-size: 47px;
+  }
 }
 
 .menu-point {
@@ -128,8 +154,8 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #FFFFFF;
-  border-radius: 40px;
+  background-color: #ffffff;
+  border-radius: 25px;
   width: 47%;
   height: 16.88em;
   transition: ease-in-out 0.1s;
@@ -138,7 +164,16 @@ p {
     color: white;
     width: 51%;
     height: 18em;
-    background-color: #2A3647;
+    background-color: #2a3647;
+  }
+
+  @media (max-width: 750px) {
+    height: 15em;
+
+      &:hover {
+    color: white;
+    height: 16em;
+  }
   }
 }
 
@@ -146,7 +181,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 20em;
+  height: 16em;
   width: 100%;
 }
 
@@ -158,22 +193,34 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #FFFFFF;
-  border-radius: 40px;
+  background-color: #ffffff;
+  border-radius: 25px;
   height: 16.88em;
   width: 90%;
   transition: ease-in-out 0.1s;
 
+    @media (max-width: 750px) {
+    height: 15em;
+
+      &:hover {
+    color: white;
+    height: 16em;
+  }
+  }
+
   &:hover {
     height: 18em;
     width: 100%;
-    background-color: #2A3647;
+    background-color: #2a3647;
   }
 }
 
 .deadline-priority-container {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 18em;
+
 }
 
 .deadline-priority {
@@ -183,17 +230,20 @@ p {
   gap: 30px;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #FFFFFF;
-  border-radius: 40px;
+  background-color: #ffffff;
+  border-radius: 25px;
   width: 100%;
   height: 16.88em;
   transition: ease-in-out 0.1s;
 
+  @media (max-width: 750px) {
+    height: 15em;
+  }
 
   &:hover {
     width: 103%;
-    height: 19em;
-    background-color: #2A3647;
+    height: 16em;
+    background-color: #2a3647;
   }
 
   >.hyphen {
@@ -230,6 +280,10 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
+@media (max-width: 750px) {
+  height: 16em;
+}
+  
 }
 
 .category-number-container {
@@ -237,5 +291,10 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
 
+@media (max-width: 750px) {
+  img {
+    width: 40px;
+  }
 }
