implementing authGuard and logOut function

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,7 +12,7 @@
             <a routerLink="/help"><p id="help">Help</p></a>
             <a routerLink="/legalNotice"><p>Legal Notice</p></a>
             <a routerLink="/privacy"><p>Privacy</p></a>
-            <p>Log out</p>
+            <p (click)="logOut()">Log out</p>
         </div>
     </div>
 </section>
