added responsive design on login page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="content">
     <div class="background-content">
-      <img src="assets/img/header/Logo.png" alt="Logo Join">
+      <img class="logo" src="assets/img/header/Logo.png" alt="Logo Join">
       <div class="login-nav">
         <p>Not a Join User?</p>
         <button class="register-button" routerLink="/signup">Sign up</button>
@@ -29,7 +29,10 @@
         </div>
       </div>
     </div>
-
+    <div class="login-nav-mobile">
+        <p>Not a Join User?</p>
+        <button class="register-btn-mobile" routerLink="/signup">Sign up</button>
+      </div>
     <footer>
       <div class="footer-content">
         <a routerLink="/privacy">Privacy Policy</a>
