--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,6 @@
 section {
     width: 100%;
+    max-width: (1920px - 230px);
     height: 100dvh;
     font-size: 10px;
 
@@ -10,13 +11,21 @@ section {
         width: 100%;
         height: 100%;
         font-size: 1.6em;
+        background-color: #f0f0f0;
 
         .background-content {
-            padding: 3em;
+            padding: 3em 5em;
             display: flex;
             justify-content: space-between;
             align-items: center;
             width: 100%;
+
+
+            .logo {
+                @media (max-width: 750px) {
+                    width: 4.5em;
+                }
+            }
 
             .login-nav {
                 display: flex;
@@ -42,23 +51,33 @@ section {
                         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
                     }
                 }
+
+                @media (max-width: 750px) {
+                    display: none;
+                }
             }
         }
-
 
         .login-container {
             display: flex;
             justify-content: center;
         }
+
         .login-overlay {
+            background-color: white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 60%;
-            height: 60dvh;
+            width: 50%;
+            height: 55dvh;
             border-radius: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+
+            @media (max-width: 750px) {
+                width: 80%;
+            }
 
             .login-title {
                 display: flex;
@@ -70,6 +89,14 @@ section {
                 h1 {
                     margin-bottom: 0.1em;
                     font-size: 6.1em;
+
+                    @media (max-width: 750px) {
+                        font-size: 4em;
+                    }
+
+                    @media (max-width: 360px) {
+                        font-size: 3em;
+                    }
                 }
 
                 .title-line {
@@ -78,11 +105,16 @@ section {
                     background-color: #29abe2;
                     border-radius: 10px;
                     margin-bottom: 1.8em;
+
+                    @media (max-width: 750px) {
+                        width: 8em;
+                    }
                 }
             }
 
             .login-form {
                 display: flex;
+                width: 100%;
 
                 form {
                     display: flex;
@@ -93,7 +125,7 @@ section {
                     width: 100%;
 
                     input {
-                        width: 34em;
+                        width: 60%;
                         min-height: 48px;
                         border-radius: 15px;
                         padding: 0.5em;
@@ -110,6 +142,10 @@ section {
                         gap: 1em;
                         margin-top: 4em;
 
+                        @media (max-width: 750px) {
+                            flex-direction: column;
+                        }
+
                         .login-button {
                             color: white;
                             display: flex;
@@ -120,12 +156,17 @@ section {
                             border-radius: 10px;
                             font-size: 1.6em;
                             font-weight: 600;
-                            padding: 10px 18px;
+                            padding: 8px 18px;
                             transition: box-shadow 0.3s ease;
 
                             &:hover {
                                 background-color: #29abe2;
                                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                            }
+
+                            @media (max-width: 750px) {
+                                width: 60%;
+                                font-size: 18px;
                             }
                         }
 
@@ -147,32 +188,73 @@ section {
                                 border: 2px #29abe2 solid;
                                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
                             }
+
+                            @media (max-width: 750px) {
+                                width: 60%;
+                                font-size: 18px;
+                            }
                         }
                     }
                 }
             }
         }
-    }
 
-    footer {
-        width: 100%;
-        margin-top: auto;
+        .login-nav-mobile {
+            display: none;
 
-        .footer-content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            gap: 1em;
+            @media (max-width: 750px) {
+                margin-top: 2em;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 4em;
+                gap: 1.5em;
+            }
 
-            .a {
-                text-decoration: none;
-                color: rgb(184, 184, 184);
+            .register-btn-mobile {
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: #2a3647;
+                border: solid rgba(0, 0, 0, 0.049) 2px;
+                border-radius: 10px;
+                font-size: 16px;
+                padding: 10px 18px;
+                transition: box-shadow 0.3s ease;
 
                 &:hover {
-                    color: #29abe2;
+                    background-color: #29abe2;
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                }
+            }
+        }
+
+        footer {
+            width: 100%;
+
+            .footer-content {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 6em;
+                gap: 2em;
+
+                a {
+                    text-decoration: none;
+                    color: rgb(184, 184, 184);
+
+                    &:hover {
+                        color: #29abe2;
+                    }
                 }
             }
         }
     }
+}
+
+.d-none {
+    display: none;
 }
