Style: Summary scss done

--- a/src/app/summary/summary-content/summary-content.component.html
+++ b/src/app/summary/summary-content/summary-content.component.html
@@ -16,33 +16,33 @@
 
       <div class="to-do-done">
         <div class="menu-point">
-          <img src="../../../../assets/img/summary/toDoIconDefault.png" alt="">
+          <div class="to-do-icon"></div>
           <div class="category-number-container">
             <p>1</p>
-            <span>To-do</span>
+            <span class="text-input">To-do</span>
           </div>
         </div>
 
         <div class="menu-point">
-          <img src="../../../../assets/img/summary/doneIconDefault.png" alt="">
+          <div class="done-icon"></div>
           <div class="category-number-container">
             <p>1</p>
-            <span>Done</span>
+            <span class="text-input">Done</span>
           </div>
         </div>
       </div>
+      
       <div class="deadline-priority-container">
         <div class="deadline-priority">
           <div class="priority">
-            <img src="../../../../assets/img/summary/urgentDefaultIcon.png" alt="">
+            <img src="../../../../assets/img/summary/urgentDefaultIcon.png">
             <div class="category-number-container">
               <p>1</p>
-              <span>Urgent</span>
+              <span class="text-input">Urgent</span>
             </div>
           </div>
 
           <div class="hyphen"></div>
-
           <div class="deadline">
             <span id="date">{{ today | date:'MMMM d, yyyy' }}</span>
             <span id="deadline">Upcoming Deadline</span>
@@ -55,21 +55,21 @@
         <div class="hover-container">
           <div class="small-menu-point">
             <h4>5</h4>
-            <span>Tasks in <br> Board</span>
+            <span class="text-input">Tasks in <br> Board</span>
           </div>
         </div>
 
       <div class="hover-container">
         <div class="small-menu-point">
           <h4>2</h4>
-          <span>Tasks in <br> Progress</span>
+          <span class="text-input">Tasks in <br> Progress</span>
         </div>
       </div>
 
       <div class="hover-container">
         <div class="small-menu-point">
           <h4>2</h4>
-          <span>Awaiting <br> Feedback</span>
+          <span class="text-input">Awaiting <br> Feedback</span>
         </div>
       </div>
 
