--- a/src/app/shared/legal-notice/legal-notice.component.html
+++ b/src/app/shared/legal-notice/legal-notice.component.html
@@ -5,7 +5,7 @@
         <div class="contractDetails">
             <h1 class="DieterHeading1">Imprint</h1>
             <h2 class="HeadingLeft"><span>Provider</span></h2>
-            <p class="Body">Burak Bostanli, Pascal Fiedler, Irina Gorges, Maik Bennefeld</p>
+            <p class="Body">Burak Bostanli, Pascal Fliedner, Irina Gorges, Maik Bennefeld</p>
             <p class="Body"><span class="multiline">Am Schacht 10
                 31084 Freden</span>
             </p>
