added desktop start animation

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,9 @@
 <section>
   <div class="content">
     <div class="background-content">
-      <img class="logo" src="assets/img/header/Logo.png" alt="Logo Join">
+      <div class="logo-wrapper slide">
+        <img id="animated-logo" class="logo" src="assets/img/header/Logo.png" alt="Logo Join">
+      </div>
       <div class="login-nav">
         <p>Not a Join User?</p>
         <button class="register-button" routerLink="/signup">Sign up</button>
@@ -16,23 +18,23 @@
         </div>
         <div class="login-form">
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
-          <input type="email" placeholder="Email" formControlName="email">
-          @if(errorMessage){
+            <input type="email" placeholder="Email" formControlName="email">
+            @if(errorMessage){
             <div>{{errorMessage}}</div>
-          }
-          <input type="password" placeholder="Password" formControlName="password">
-          <div class="form-btn">
-            <button type="submit" class="login-button">Login</button>
-            <button (click)="guestLogIn()" class="guest-button" routerLink="/">Guest Log in</button>
-          </div>
-        </form>
+            }
+            <input type="password" placeholder="Password" formControlName="password">
+            <div class="form-btn">
+              <button type="submit" class="login-button">Login</button>
+              <button (click)="guestLogIn()" class="guest-button" routerLink="/">Guest Log in</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
     <div class="login-nav-mobile">
-        <p>Not a Join User?</p>
-        <button class="register-btn-mobile" routerLink="/signup">Sign up</button>
-      </div>
+      <p>Not a Join User?</p>
+      <button class="register-btn-mobile" routerLink="/signup">Sign up</button>
+    </div>
     <footer>
       <div class="footer-content">
         <a routerLink="/privacy">Privacy Policy</a>
