--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -20,6 +20,32 @@ section {
             align-items: center;
             width: 100%;
 
+            .logo-wrapper {
+                z-index: 200;
+                animation: moveLogo 1.25s ease-in-out;
+                
+                @keyframes diagonal-slide {
+                    0% {
+                        left: 45%;
+                        top: 200%;
+                        transform: scale(3); // doppelte Größe
+                    }
+                    100% {
+                        left: 0;
+                        top: 0;
+                        transform: scale(1); // normale Größe
+                    }
+                }
+            }
+
+
+            .slide {
+                -webkit-animation: diagonal-slide 1.25s;
+                animation: diagonal-slide 1.25s;
+                _position: relative;
+            }
+
+           
 
             .logo {
                 @media (max-width: 750px) {
@@ -73,7 +99,6 @@ section {
             height: 55dvh;
             border-radius: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-
 
             @media (max-width: 750px) {
                 width: 80%;
