--- a/src/app/summary/summary-content/summary-content.component.html
+++ b/src/app/summary/summary-content/summary-content.component.html
@@ -6,10 +6,10 @@
       <h3>Key Metrics at Glance</h3>
     </div>
 
-        <div class="headline-area-summary-mobile">
+    <div class="headline-area-summary-mobile">
       <h1>Join 360</h1>
       <h3>Key Metrics at Glance</h3>
-            <div class="hyphen-mobile"></div>
+      <div class="hyphen-mobile"></div>
     </div>
 
     <div class="menu-summary">
@@ -18,7 +18,7 @@
         <div class="menu-point">
           <div class="to-do-icon"></div>
           <div class="category-number-container">
-            <p>1</p>
+            <p>{{todoCount}}</p>
             <span class="text-input">To-do</span>
           </div>
         </div>
@@ -26,18 +26,18 @@
         <div class="menu-point">
           <div class="done-icon"></div>
           <div class="category-number-container">
-            <p>1</p>
+            <p>{{doneCount}}</p>
             <span class="text-input">Done</span>
           </div>
         </div>
       </div>
-      
+
       <div class="deadline-priority-container">
         <div class="deadline-priority">
           <div class="priority">
             <img src="../../../../assets/img/summary/urgentDefaultIcon.png">
             <div class="category-number-container">
-              <p>1</p>
+              <p>{{urgentCount}}</p>
               <span class="text-input">Urgent</span>
             </div>
           </div>
@@ -54,24 +54,24 @@
       <div class="progression-tasks">
         <div class="hover-container">
           <div class="small-menu-point">
-            <h4>5</h4>
+            <h4>{{filteredTasks.length}}</h4>
             <span class="text-input">Tasks in <br> Board</span>
           </div>
         </div>
 
-      <div class="hover-container">
-        <div class="small-menu-point">
-          <h4>2</h4>
-          <span class="text-input">Tasks in <br> Progress</span>
+        <div class="hover-container">
+          <div class="small-menu-point">
+            <h4>{{progressCount}}</h4>
+            <span class="text-input">Tasks in <br> Progress</span>
+          </div>
         </div>
-      </div>
 
-      <div class="hover-container">
-        <div class="small-menu-point">
-          <h4>2</h4>
-          <span class="text-input">Awaiting <br> Feedback</span>
+        <div class="hover-container">
+          <div class="small-menu-point">
+            <h4>{{feedbackCount}}</h4>
+            <span class="text-input">Awaiting <br> Feedback</span>
+          </div>
         </div>
-      </div>
 
 
       </div>
@@ -80,6 +80,6 @@
   </div>
   <div class="user-greeting">
     <h2>Good morning, </h2>
-    <br> <span id="username">Sofia Müller</span>
+    <br> <span id="username">{{userFullName}}</span>
   </div>
 </section>
