--- a/src/app/shared/help-me/help-me.component.html
+++ b/src/app/shared/help-me/help-me.component.html
@@ -1,1 +1,27 @@
-<p>help-me works!</p>
+<div class="main-content">
+  <div class="nav-area"><app-nav-footer></app-nav-footer></div>
+  <div class="main-content-input">
+    <app-header></app-header>
+        <div class="help-me-content">
+            <div><h1>Help</h1><button>back</button></div>
+            <div><p>Welcome to the help page for <span>join</span>, your guide to using our kanban project management tool. Here, we'll provide an overview of what <span>Join</span> is, how it can benefit you, and how to use it.</p></div>
+            <h2>What is Join?</h2>
+            <div>
+                <p><span>Join</span> is a kanban-based project management tool designed and built by a group of dedicated students as a part of their web development bootcamp at the Developer Akademie.</p>
+                <br><br>
+                <p>Kanban, a Japanese term meaning "billboard", is a highly effective method of visualize work, limit work-in-progress, and maximize efficiency (or flow). <span>Join</span> leverages the principles of Kanban to help users manage their tasks and projects in an intuitive, visual interface.</p>
+                <br><br>
+                <p>It is important to note that <span>Join</span> is designed as an educational exercise and is not intended for extensive business usage. While we strive to ensure the best possible user experience, we cannot guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding <span>Join</span>.</p>
+            </div>
+            <h2>How to use it</h2>
+            <div>
+                <p>here is a step-by-step guide on how to use <span>Join</span></p>
+                <ol>
+                    
+                </ol>
+            </div>
+        </div>
+  </div>
+</div>
+<div class="createdTask" > <p>Task added to board </p><img src="assets/img/kanban-board/taskAddedIcon.png"></div>
+<app-nav-footer-mobile></app-nav-footer-mobile>
