--- a/src/app/shared/help-me/help-me.component.html
+++ b/src/app/shared/help-me/help-me.component.html
@@ -17,7 +17,13 @@
             <div>
                 <p>here is a step-by-step guide on how to use <span>Join</span></p>
                 <ol>
-                    
+                    <li><b>Exploring The Board</b><br>When you log in to <span>Join</span>, you'll find a default board. This board represents your project and contains four default lists: "To Do", "In Progress", "Await feedback" and "Done".</li>
+                    <li><b>Creating Contacts</b><br>In <span>Join</span>, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in the required informations. Once added, these contacts can be assigned tasks and they can interact with the tasks on the board.</li>
+                    <li><b>Adding Cards</b><br>Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. Click the "+" button under the appropriate list to create a new card. Fill in the task details in the card, like task name, description, due date, assignees, etc.</li>
+                    <li><b>Moving Cards</b><br>As the task Moves from one stage to another, you can reflect that on the board by dragging and dropping the card from one list to another.</li>
+                    <li><b>Deleting Cards</b><br>Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a card will permanently remove it from the board. Please exercise caution when deleting cards, as this action is rreversible. <br><br>
+                    Remember that using <span>Join</span> effectively requires consistent updates from you and your team tu ensure the board reflects the current state of your project. <br><br>
+                    Have more questions about <span>Join</span>? Feel free to contact us at <a href="mailto:maikbennefeld@gmail.com">maikbennefeld&#64;gmail.com</a>. We're here to help you!</li>
                 </ol>
             </div>
         </div>
