--- a/src/app/kanban/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban/kanban-board/kanban-board.component.scss
@@ -51,6 +51,8 @@ section {
 					width: 100%;
 					height: 100%;
 					scrollbar-width: none;
+									overflow-y: hidden;
+
 
 					@media (max-width: 1300px) {
 						width: 100%;
