style&feat: header inits done & summary responsive edit

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
         <div class="kanban"></div>
         <div class="menu">
             <a routerLink="/help"><div class="help"></div></a>
-            <span id="user" (click)="toggleDropDown()">HA</span>
+            <span id="user" (click)="toggleDropDown()">{{initialsUser}}</span>
         </div>
         </header>
         <div id="drop-down" class="hidden">
