--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -68,6 +68,7 @@ section {
                 }
 
                 span {
+                    text-align: center;
                     height: 49px;
                     width: 49px;
                     font-size: 1.6em;
