--- a/src/app/summary/summary-content/summary-content.component.scss
+++ b/src/app/summary/summary-content/summary-content.component.scss
@@ -8,7 +8,7 @@ section {
     display: flex;
     flex-direction: column;
 
-    @media (max-width: 1270px) {
+    @media (max-width: 1300px) {
       width: 100%;
       flex: 1;
     }
@@ -20,19 +20,19 @@ section {
 }
 
 .user-greeting {
-  margin-left: 10em;
+  margin-left: clamp(4em, 10vw, 10em);
   height: 100%;
   display: flex;
   align-items: start;
   justify-content: center;
   flex-direction: column;
 
-  @media (max-width: 1270px) {
+  @media (max-width: 1300px) {
     display: none;
   }
 
   #username {
-    font-size: 6.4em;
+  font-size: clamp(3em, 4vw, 6.4em);
     font-weight: bold;
     color: #29abe2;
   }
@@ -42,11 +42,10 @@ section {
   gap: 2em;
   margin: 6em 0em;
   display: flex;
-  justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 117%;
 
-  @media (max-width: 1270px) {
+  @media (max-width: 1300px) {
     display: none;
   }
 
@@ -65,7 +64,7 @@ section {
   align-items: center;
   width: 100%;
 
-  @media (max-width: 1270px) {
+  @media (max-width: 1300px) {
     margin: 5em 0em;
     display: flex;
     justify-content: start;
@@ -73,7 +72,7 @@ section {
     align-items: start;
   }
 
-  @media (max-width: 1270px) {
+  @media (max-width: 1300px) {
     margin: 3em 0em;
   }
 
@@ -170,7 +169,7 @@ h3 {
 
 h2 {
   font-weight: 500;
-  font-size: 4.7em;
+  font-size: clamp(3em, 3vw, 4.7em);
   color: #2a3647;
 }
 
@@ -183,11 +182,7 @@ h4 {
 }
 
 h1 {
-  font-size: 6.1em;
-
-  @media (max-width: 750px) {
-    font-size: 47px;
-  }
+  font-size: clamp(4.7em, 4vw, 6.1em);
 }
 
 p {
@@ -352,4 +347,39 @@ p {
   img {
     width: 40px;
   }
+}
+
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.three-dots-loader span {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: #09f;
+  margin: 0 4px;
+  animation: bounce 1s infinite ease-in-out;
+}
+
+.three-dots-loader span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.three-dots-loader span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes bounce {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-10px); }
 }
