--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,11 +18,14 @@
         </div>
         <div class="login-form">
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
-            <input class="mail-icon" type="email" placeholder="Email" formControlName="email">
-            @if(errorMessage){
-            <div>{{errorMessage}}</div>
-            }
-            <input class="lock-icon" type="password" placeholder="Password" formControlName="password">
+            <input class="mail-icon" type="email" placeholder="Email" formControlName="email"
+              [class.error-border]="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched)">
+
+            <input class="lock-icon" type="password" placeholder="Password" formControlName="password"
+              [class.error-border]="form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)">
+            <div class="error-text">
+              <p>{{errorMessage}}</p>
+            </div>
             <div class="form-btn">
               <button type="submit" class="login-button">Login</button>
               <button (click)="guestLogIn()" class="guest-button" routerLink="/">Guest Log in</button>
