--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,7 +7,7 @@ section {
     .content {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         width: 100%;
         height: 100%;
         font-size: 1.6em;
@@ -96,7 +96,7 @@ section {
             justify-content: center;
             align-items: center;
             width: 50%;
-            height: 55dvh;
+            height: 40dvh;
             border-radius: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
@@ -177,7 +177,7 @@ section {
                         align-items: center;
                         width: 100%;
                         gap: 1em;
-                        margin-top: 4em;
+                        margin-top: 2.5em;
 
                         @media (max-width: 750px) {
                             flex-direction: column;
@@ -294,4 +294,15 @@ section {
 
 .d-none {
     display: none;
+}
+
+.error-text{
+    font-weight: light;
+    height: 2em;
+    width: 69%;
+    color: rgb(255, 102, 102);
+}
+
+.error-border{
+    border-color: red !important;
 }
