--- a/src/app/summary/summary-content/summary-content.component.html
+++ b/src/app/summary/summary-content/summary-content.component.html
@@ -87,7 +87,9 @@
   <div class="loader-overlay">
     <div class="three-dots-loader">
       <h2>{{ currentGreeting() }}</h2> 
-      <span>Loading...</span>
+      <span>{{userFullName}}</span>
     </div>
   </div>
+
 }
+
