--- a/src/styles.scss
+++ b/src/styles.scss
@@ -176,6 +176,18 @@ button {
     }
 }
 
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+        transform: translateX(0);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 @keyframes fade-in-left-fullcard {
     0% {
         opacity: 0;
