--- a/src/app/summary/summary-content/summary-content.component.scss
+++ b/src/app/summary/summary-content/summary-content.component.scss
@@ -359,24 +359,14 @@ p {
   justify-content: center;
   align-items: center;
   z-index: 1000;
+      animation: fade-in 1s ease-in-out;
+
 }
 
 .three-dots-loader span {
   display: inline-block;
   border-radius: 50%;
   margin: 0 4px;
-  animation: bounce 1s infinite ease-in-out;
+  animation: fade-in-left 1s ease-in-out;
 }
 
-.three-dots-loader span:nth-child(2) {
-  animation-delay: 0.2s;
-}
-
-.three-dots-loader span:nth-child(3) {
-  animation-delay: 0.4s;
-}
-
-@keyframes bounce {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-10px); }
-}
