Update help and signup overlay styles and content
Improved the help-me component's HTML structure and guide text, added new and updated SCSS styles for help-me and signup-overlay components for better layout and responsiveness. Minor formatting fixes in kanban.component.html.

--- a/src/app/shared/help-me/help-me.component.html
+++ b/src/app/shared/help-me/help-me.component.html
@@ -1,6 +1,6 @@
 <div class="main-content">
-  <div class="nav-area"><app-nav-footer></app-nav-footer></div>
-  <div class="main-content-input">
+    <div class="nav-area"><app-nav-footer></app-nav-footer></div>
+    <div class="main-content-input">
     <app-header></app-header>
         <div class="help-me-content">
             <div><h1>Help</h1><button>back</button></div>
@@ -13,9 +13,13 @@
                 <br><br>
                 <p>It is important to note that <span>Join</span> is designed as an educational exercise and is not intended for extensive business usage. While we strive to ensure the best possible user experience, we cannot guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding <span>Join</span>.</p>
             </div>
+            <br>
+            <br>
             <h2>How to use it</h2>
+            <br>
             <div>
-                <p>here is a step-by-step guide on how to use <span>Join</span></p>
+                <p>Here is a step-by-step guide on how to use <span>Join</span></p>
+                <br>
                 <ol>
                     <li><b>Exploring The Board</b><br>When you log in to <span>Join</span>, you'll find a default board. This board represents your project and contains four default lists: "To Do", "In Progress", "Await feedback" and "Done".</li>
                     <li><b>Creating Contacts</b><br>In <span>Join</span>, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in the required informations. Once added, these contacts can be assigned tasks and they can interact with the tasks on the board.</li>
@@ -26,8 +30,8 @@
                     Have more questions about <span>Join</span>? Feel free to contact us at <a href="mailto:maikbennefeld@gmail.com">maikbennefeld&#64;gmail.com</a>. We're here to help you!</li>
                 </ol>
             </div>
+            <div><h2>Enjoy using Join!</h2></div>
         </div>
-  </div>
+    </div>
 </div>
-<div class="createdTask" > <p>Task added to board </p><img src="assets/img/kanban-board/taskAddedIcon.png"></div>
 <app-nav-footer-mobile></app-nav-footer-mobile>
