--- a/src/app/shared/help-me/help-me.component.scss
+++ b/src/app/shared/help-me/help-me.component.scss
@@ -5,5 +5,81 @@ ol {
     li::before {
         counter-increment: section;
         content: counters(section, ".")". ";
+        font-size: 20px;
+        
+    }
+    li{
+        padding-bottom: 2em;
+        b{
+            font-size: 20px;
+        }
     }
 }
+
+.main-content {
+    display: flex;
+    height: 100dvh;
+    overflow-x: hidden;
+
+    @media (max-width:965px) {
+        height: 92dvh;
+    }
+}
+
+.main-content-input {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background: #f0f0f0;
+}
+
+.kanban-board-content {
+    display: flex;
+    flex: 1;
+    height: 90%;
+    padding: 0em 4em;
+    background: #f0f0f0;
+    max-width: (1920px - 230px);
+    width: calc(100dvw - 230px);
+    overflow-y: auto;
+    @media (max-width:965px) {
+        padding: 0px 10px;
+            width: calc(100dvw);
+
+    }
+}
+
+app-kanban-board {
+    width: 100%;
+}
+
+.help-me-content{
+    padding: clamp(1em , 8vw, 5em);
+    overflow-y: scroll;
+}
+
+.hidden {
+    display: none;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    appearance: textfield;
+}
+
+
+
+.display {
+    display: flex;
+}
+
+
+span{
+    color: #29abe2;
+}
+
